Add link to create new discount to view

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -3,3 +3,5 @@
 <% @bulk_discounts.each do |discount| %>
   <li><%= number_to_percentage(discount.percentage_discount, precision: 0) %> off - <%= discount.quantity_threshold %> or more of one item - <%= link_to "Link to Discount ##{discount.id}", merchant_bulk_discount_path(@merchant.id, discount.id) %></li>
 <% end %>
+
+<%= link_to "Create New Discount", new_merchant_bulk_discount_path(@merchant.id) %>
