Add test for delete

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -2,8 +2,7 @@
 
 <% @bulk_discounts.each do |discount| %>
 <div id="discount<%=discount.id%>"
-  <li><%= number_to_percentage(discount.percentage_discount, precision: 0) %> off - <%= discount.quantity_threshold %> or more of one item - <%= link_to "Link to Discount ##{discount.id}", merchant_bulk_discount_path(@merchant.id, discount.id) %></li>
-   <%= discount.quantity_threshold %> or more of one item -
+  <li><%= number_to_percentage(discount.percentage_discount, precision: 0) %> off: <%= discount.quantity_threshold %> or more of one item </li>
   <%= link_to "Link to Discount ##{discount.id}", merchant_bulk_discount_path(discount.merchant_id, discount.id) %>
   <%= link_to "Delete ##{discount.id}", merchant_bulk_discount_path(discount.merchant_id, discount.id), method: :delete  %>
   </li>
