Add link to edit discount

--- a/app/views/bulk_discounts/show.html.erb
+++ b/app/views/bulk_discounts/show.html.erb
@@ -1,2 +1,4 @@
 <h1> Merchant Bulk Discounts </h1>
 <%= number_to_percentage(@bulk_discount.percentage_discount, precision: 0) %> off: <%= @bulk_discount.quantity_threshold %> items
+
+<%= link_to "Edit Discount ##{@bulk_discount.id}", edit_merchant_bulk_discount_path(@bulk_discount.merchant_id, @bulk_discount.id) %>
