--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,6 +21,7 @@
 
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
   <p>Total Revenue: <%= @invoice.total_revenue %></p>
+  <p>Total Discounted Revenue: $<%= @invoice.total_discounted_revenue%></p>
 
 
   <h4>Customer:</h4>
@@ -52,6 +53,13 @@
           </tr>
         </section>
       <% end %>
+      <% discount_items = @invoice.discount_items %>
+        <section id="invoice_item-<%=@invoice_item.id%>">
+        <% if discount_items.include?(@invoice_item) %>
+          <%= link_to "Applied Discount", merchant_bulk_discount_path(@merchant.id, discount_items.find(@invoice_item.id).discount) %>
+        <% end %>
+
+        </section>
     </tbody>
   </table>
 
