--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -53,10 +53,13 @@
           </tr>
         </section>
       <% end %>
+
       <% discount_items = @invoice.discount_items %>
-        <section id="invoice_item-<%=@invoice_item.id%>">
-        <% if discount_items.include?(@invoice_item) %>
-          <%= link_to "Applied Discount", merchant_bulk_discount_path(@merchant.id, discount_items.find(@invoice_item.id).discount) %>
+        <% @invoice_item.each do |item|%>
+        <section id="invoice_item-<%=item.id%>">
+          <% if discount_items.include?(item) %>
+            <%= link_to "Applied Discount", merchant_bulk_discount_path(@merchant.id, discount_items.find(item.id).discount) %>
+         <% end %>
         <% end %>
 
         </section>
